@@ -1,35 +1,12 @@
 public class TestJit {
 
-	public static int test_call (int a, int b) {
+	public static double test_call (double a, double b) {
 		return a+b;
 	}
 
-	public static int test_shift ()
-	{
-		int a = 9, b = 1;
-		
-		if ((a << 1) != 18)
-			return 1;
-
-		if ((a << b) != 18)
-			return 1;
-
-		if ((a >> 1) != 4)
-			return 1;
-		
-		if ((a >> b) != 4)
-			return 1;
-
-		a = -9;
-		if ((a >> b) != -5)
-			return 1;
-
-		return 0;
-	}
-	
 	public static int test_alu ()
 	{
-		int a = 9, b = 6;
+		double a = 9, b = 6;
 		
 		if ((a + b) != 15)
 			return 1;
@@ -37,34 +14,24 @@ public class TestJit {
 		if ((a - b) != 3)
 			return 1;
 
-		if ((a & 8) != 8)
-			return 1;
-
-		if ((a | 2) != 11)
-			return 1;
-
 		if ((a * b) != 54)
 			return 1;
 		
-		if ((a / 4) != 2)
+		if ((a / 4) != 2.25)
 			return 1;
 		
-		if ((a % 4) != 1)
-			return 1;
+		//if ((a % 4) != 1)
+		//	return 1;
 
 		if (-a != -9)
 			return 1;
 
-		b = -1;
-		if (~b != 0)
-			return 1;
-		
 		return 0;
 	}
 	
 	public static int test_branch ()
 	{
-		int a = 5, b = 5, t;
+		double a = 5, b = 5, t;
 		
 		if (a == b) t = 1; else t = 0;
 		if (t != 1) return 1;
@@ -102,10 +69,6 @@ public class TestJit {
 			return num;
 		num++;
 
-		if (test_shift () != 0)
-			return num;
-		num++;
-		
 		return 0;
 	}
 }
