@@ -1,5 +1,7 @@
 2001-09-24  Dietmar Maurer  <dietmar@ximian.com>
 
+	* mono/tests/Makefile.am (testjit): a new target to test the JITer
+
 	* mono/tests/jit-*: added some test for the JITer
 
 2001-09-23  Dick Porter  <dick@ximian.com>
